# Bricks-Agent

./: README.md  fluxo.drawio  main.py  pyproject.toml
.github/workflows/: python-ci.yml
data/: README.md  data_generator.py  models.py
src/: README.md  app.py  main.py  prompt_template.txt  settings.py
